@@ -613,7 +613,7 @@ void server_clist_build_filtered (GSList *server_list, int update) {
   struct server *server;
   int row;
 
-  debug (0, "server_clist_build_filterd() -- Update? %d", update);
+  debug(3, "server_clist_build_filterd() -- Update? %d", update);
 
 #if 0
 
